--- a/templates/index.html
+++ b/templates/index.html
@@ -14,14 +14,15 @@
     <div class="container">
       <!-- Add Jumbotron to Header -->
       <div class="jumbotron text-center">
-        <h1>Mission to Mars</h1>
+        <h1 class="text-danger">Mission to Mars</h1>
         <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <p><a class="btn btn-warning btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
+      
 
       <!-- Add section for Mars News -->
       <div class="row" id="mars-news">
-        <div class="col-xs-12 col-md-12"></div>
+        <div class="col-xs-12 col-md-12">
           <div class="media">
             <div class="media-body">
               <h2>Latest Mars News</h2>
@@ -33,21 +34,20 @@
       </div>
 
       <!-- Section for Featured Image and Facts table -->
-      <div class="row" id="mars-featured-image">
-        <div class="col-xs-8 col-md-7">
+      <div class="row" id="mars-featured-image"></div>
+        <div class="col-xs-8 col-md-8">
           <h2>Featured Mars Image</h2>
-
           <!-- if images is False/None/non-existent, then default to error message -->
           <img
             src="{{mars.featured_image | default('static/images/error.png', true) }}"
-            class="img-responsive"
+            class="img-responsive center-block img-rounded"
             alt="Responsive image"
           />
         </div>
-
-        <div class="col-xs-4 col-md-5">
+  
+        <div class="col-xs-4 col-md-4">
+          <div class="row" id="mars-facts"></div>  
           <!-- Mars Facts -->
-          <div class="row" id="mars-facts">
             <h4>Mars Facts</h4>
             {{ mars.facts | safe }}
           </div>
@@ -57,15 +57,18 @@
       <!-- Section for Mars Hemispheres -->
       <div class="row" id="mars-hemispheres">
         <div class="page-header">
-          <h2 class="text-center">Mars Hemispheres</h2>
+          <h2 class="text-center text-danger">Mars Hemispheres</h2>
         </div>
 
         {% for hemisphere in mars.hemispheres %}
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-3 col-md-3 center-block">
           <div class="thumbnail">
-            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
+            <img 
+            src="{{hemisphere.img_url | default('static/images/error.png', true)}}" 
+            class="img-circle img-responsive center-block" 
+            alt="Responsive image">
             <div class="caption">
-              <h3>{{hemisphere.title}}</h3>
+              <h3 class="text-center text-danger">{{hemisphere.title}}</h3>
             </div>
           </div>
         </div>
